Added subscriber state to testcontroller (#1988)
